# mope_game_engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: check-ubuntu-compilation.yml
examples/: CMakeLists.txt
examples/glfw_game_window/: CMakeLists.txt
examples/glfw_game_window/include/: CMakeLists.txt
examples/glfw_game_window/include/glfw_game_window/: glfw_game_window.hxx
examples/glfw_game_window/src/: CMakeLists.txt  glfw_game_window.cxx
examples/pong/: CMakeLists.txt
examples/pong/src/: CMakeLists.txt  future.hxx  glfw.cxx  glfw.hxx  main.cxx  pong.cxx  pong.hxx  winmain.cxx
include/: CMakeLists.txt
include/glad/: glad.h
include/mope_game_engine/: collisions.hxx  component.hxx  component_manager.hxx  ecs_manager.hxx  event_pool.hxx  event_pool.inl  font.hxx  game_engine.hxx  game_engine_error.hxx  game_scene.hxx  game_system.hxx  game_window.hxx  iterable_box.hxx  query.hxx  resource_id.hxx  texture.hxx  transforms.hxx
include/mope_game_engine/components/: component.hxx  input_state.hxx  logger.hxx  sprite.hxx  transform.hxx
include/mope_game_engine/events/: tick.hxx
src/: CMakeLists.txt  buffer_object.cxx  buffer_object.hxx  collisions.cxx  ecs_manager.cxx  font.cxx  freetype.hxx  game_engine.cxx  game_scene.cxx  resource_id.cxx  shader.cxx  shader.hxx  sprite_renderer.cxx  sprite_renderer.hxx  texture.cxx  vao.cxx  vao.hxx
src/glad/: glad.c
